added color codes

--- a/src/assets/scss/_color.scss
+++ b/src/assets/scss/_color.scss
@@ -1,1 +1,13 @@
-$primary: #2196f3;
+$bg-light: #f9fafb;
+$bg-dark: #1a2235;
+$border-light: #efefef;
+$border-dark: #212a41;
+$primaryDark: #12192c;
+$font-light: #6f6f6f;
+$font-dark: #90949b;
+$hover-light: #37b58f;
+$hover-dark: #76b1e7;
+$inner-light: #e7f4fd;
+$inner-dark: #1e2943;
+$white: #fff;
+$black: #000;
