created login page

--- a/src/assets/scss/_color.scss
+++ b/src/assets/scss/_color.scss
@@ -11,3 +11,6 @@ $inner-light: #e7f4fd;
 $inner-dark: #1e2943;
 $white: #fff;
 $black: #000;
+$innerInput-light: #F5F9FF;
+$button-bg: #0b9cfc;
+$button-bg-hover: #0788df;
