--- a/src/assets/scss/_default.scss
+++ b/src/assets/scss/_default.scss
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
   }
   html {
     font-size: 62.5%;
@@ -9,19 +10,18 @@
   button {
     outline: 0;
     border: 0;
-    border-radius: 5px;
+    border-radius: 8px;
     padding: 1rem 2rem;
     font-size: 1.4rem;
     font-weight: 500;
     font-family: inherit;
-    background-color: #eceaea;
+    background-color: #4703b4;
     cursor: pointer;
     margin: 0.8rem;
     position: relative;
     overflow: hidden;
     transition: background 400ms;
     color: #fff;
-    box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.3);
     cursor: pointer;
   }
   input {
@@ -34,4 +34,8 @@
     font-family: inherit;
     background-color: #eceaea;
     margin: 0.8rem;
+  }
+  .errorboundary{
+    margin-top: 1rem;
+    color: red;
   }
