--- a/src/assets/scss/_default.scss
+++ b/src/assets/scss/_default.scss
@@ -35,6 +35,10 @@
     background-color: #eceaea;
     margin: 0.8rem;
   }
+  img{
+    height: 100%;
+    width: 100%;
+  }
   .errorboundary{
     margin-top: 1rem;
     color: red;
