added toggel button

--- a/src/assets/scss/_homepage.scss
+++ b/src/assets/scss/_homepage.scss
@@ -1,49 +1,133 @@
 .mainframe {
+  display: flex;
+  height: 90vh;
+  background-color: $bg-light;
+  .left1 {
+    flex: 2;
     display: flex;
-    height: 90vh;
-    background-color: $bg-light;
-    .left1 {
-        flex: 2;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2rem 0 2rem 0;
+
+    .option,
+    .modechange {
+      background-color: $white;
+      border: 1px solid $border-light;
+      border-radius: 1.5rem;
+      padding: 1.8rem;
+      width: 75%;
+    }
+    .modechange {
+      .option2 {
         display: flex;
-        flex-direction: column;
+        padding: 1rem;
+        border-radius: 0.8rem;
+        font-size: 1.8rem;
+        align-items: center;
+        cursor: pointer;
+        color: $font-light;
+        &:hover {
+          background-color: rgba($color: $hover-light, $alpha: 0.1);
+        }
+        .icon {
+          @include centerByFlex();
+          font-size: 3rem;
+          margin-right: 0.8rem;
+        }
+      }
+
+      .mode {
+        display: flex;
+        padding: 1rem;
         justify-content: space-between;
         align-items: center;
-        padding: 2rem 0 2rem 0;
-
-
-        .option,.modechange{
-            background-color: $white;
-            border: 1px solid $border-light;
-            border-radius: 1.5rem;
-            padding: 2rem;
-            width: 75%;
-
+        .icon {
+          font-size: 3rem;
+          @include centerByFlex;
+          color: $font-light;
         }
-        .modechange {
-            .option2 {
-                display: flex;
-            }
-
-            .mode {
-                display: flex;
-            }
+        .toggle-switch {
+          position: relative;
+          width: 75px;
+          display: inline-block;
+          text-align: left;
         }
-        .option {
-            
-            .option1 {
-                display: flex;
-            }
-
+        .checkbox {
+          display: none;
         }
+        .label {
+          display: block;
+          overflow: hidden;
+          cursor: pointer;
+          border: 0 solid #bbb;
+          border-radius: 20px;
+        }
+        .inner {
+          display: block;
+          width: 200%;
+          margin-left: -100%;
+          transition: margin 0.3s ease-in 0s;
+        }
+        .inner:before,
+        .inner:after {
+          float: left;
+          width: 50%;
+          height: 2.5rem;
+          padding: 0;
+          line-height: 2.5rem;
+          color: #fff;
+          font-weight: bold;
+          box-sizing: border-box;
+        }
+        .inner:before {
+          content: " ";
+          padding-left: 10px;
+          background-color: #060;
+          color: #fff;
+        }
+        .inner:after {
+          content: " ";
+          padding-right: 10px;
+          background-color: #bbb;
+          color: #fff;
+          text-align: right;
+        }
+        .switch {
+          display: block;
+          width: 24px;
+          margin: 5px;
+          background: #fff;
+          position: absolute;
+          top: 0;
+          bottom: 0;
+          right: 40px;
+          border: 0 solid #bbb;
+          border-radius: 20px;
+          transition: all 0.3s ease-in 0s;
+        }
+        .checkbox:checked + .label .inner {
+          margin-left: 0;
+        }
+        .checkbox:checked + .label .switch {
+          right: 0px;
+        }
+      }
     }
+    .option {
+      .option1 {
+        display: flex;
+      }
+    }
+  }
 
-    .post {
-        flex: 5;
-        border: 1px solid;
-    }
+  .post {
+    flex: 5;
+    border: 1px solid;
+  }
 
-    .right1 {
-        flex: 2;
-        border: 1px solid;
-    }
+  .right1 {
+    flex: 2;
+    border: 1px solid;
+  }
 }
