--- a/src/assets/scss/_homepage.scss
+++ b/src/assets/scss/_homepage.scss
@@ -10,14 +10,13 @@
         align-items: center;
         padding: 2rem 0 2rem 0;
 
-
-        .option,.modechange{
+        .option,
+        .modechange {
             background-color: $white;
             border: 1px solid $border-light;
             border-radius: 1.5rem;
             padding: 2rem;
             width: 75%;
-
         }
         .modechange {
             .option2 {
@@ -29,8 +28,8 @@
             }
         }
         .option {
-            
             .option1 {
+                color: $font-light;
                 display: flex;
                 padding: 0.8rem;
                 border-radius: 1rem;
@@ -46,11 +45,12 @@
                     margin-right: 0.5rem;
                 }
 
+                .name {
+                }
             }
-
         }
     }
- 
+
     .post {
         flex: 5;
         border: 1px solid;
@@ -59,5 +59,27 @@
     .right1 {
         flex: 2;
         border: 1px solid;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 2rem;
+
+        .news {
+            color: $font-light;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            font-size: 1.6rem;
+            background-color: $white;
+            border: 1px solid $border-light;
+            border-radius: 1.5rem;
+            padding: 2rem;
+            width: 80%;
+            height: 40rem;
+            .ll {
+                width: 15rem;
+                margin-top: 0.2rem;
+            }
+        }
     }
 }
