--- a/src/assets/scss/_color.scss
+++ b/src/assets/scss/_color.scss
@@ -15,4 +15,6 @@ $innerInput-light: #F5F9FF;
 $button-bg: #0b9cfc;
 $button-bg-hover: #0788df;
 $text-fade:#A6A6A6;
+$icon-light:#0095ff;
+$icon-dark:#746CFE;
 
