--- a/src/assets/scss/_default.scss
+++ b/src/assets/scss/_default.scss
@@ -24,7 +24,7 @@
     color: #fff;
     cursor: pointer;
   }
-  input {
+  input,textarea {
     outline: 0;
     border: 1px solid;
     border-radius: 8px;
