--- a/src/assets/scss/_homepage.scss
+++ b/src/assets/scss/_homepage.scss
@@ -4,7 +4,6 @@
   .fixedWrapper {
     width: 100%;
     display: flex;
-    height: 92vh;
     max-width: $MAX-WIDTH;
     .left1 {
       flex: 2;
@@ -144,9 +143,72 @@
       }
     }
 
+    .hr1 {
+      border: none;
+      border-bottom: 1.5px solid $border-light;
+      margin: 1rem 0 1.5rem;
+    }
+
+    .hr2 {
+      border: none;
+      border-bottom: 1.5px solid $border-light;
+      margin: 1rem 0 1rem;
+    }
     .post {
+
+
       padding: 2rem;
       flex: 5;
+
+      .mypost {
+        background-color: $white;
+        padding: 1.2rem 1rem ;
+        border: 1px solid $border-light;
+        border-radius: 1rem;
+        .head {
+          display: flex;
+          justify-content: space-between;
+
+          .aa {
+            .imgicon {
+              font-size: 3.5rem;
+            }
+            display: flex;
+            justify-content: space-between;
+
+            .username {
+              font-size: 1.3rem;
+              margin-left: 1rem;
+            }
+          }
+
+          .dropdown {
+            margin-top: 0.8rem;
+            font-size: 2.8rem;
+          }
+        }
+
+        .postimg {
+          @include centerByFlex;
+          div {
+            width: 95%;
+            img {
+              border-radius: 1.5rem;
+            }
+          }
+        }
+
+        .option1 {
+          font-size: 2.3rem;
+          display: flex;
+          justify-content: space-between;
+          padding: 0.8rem 1.3rem 0 1.3rem;
+
+          .aa {
+            display: flex;
+          }
+        }
+      }
 
       .postcrte {
         padding: 1.5rem;
